# orlandopunx-infrastructure

./: .coverage  .gitignore  .pre-commit-config.yaml  ANSIBLE_SETUP_COMPLETE.md  CODEBASE_REFACTORING_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_READINESS_REPORT.md  DUPLICATE_PREVENTION_SOLUTION.md  ENHANCED_GALLERY_GUIDE.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GITHUB_SECRETS_SETUP.md  GITHUB_SETUP.md  INFRASTRUCTURE_SUMMARY.md  Makefile  PRE_RESTORATION_CHECKLIST.md  README.md  REFACTORING_ACTION_PLAN.md  REFACTORING_README.md  REPOSITORY_STRATEGY.md  VERSION_CONTROL_SUMMARY.md  WARP.md  add_gancio_to_script.py  admin_after_click.html  admin_before_click.html  admin_events_page.html  analyze_duplicates_from_html.py  capture_admin_structure.py  clean_setup_driver.py  config.py  config_example.py  debug_admin.html  debug_admin_page.py  debug_events_table.py  debug_login.py  debug_runner_locally.sh  delete_duplicates.sql  deploy_improved_sync.sh  direct_cleanup_script.py  direct_cleanup_script_fixed.py  duplicate_ids_only.txt  (+39 more)
.github/: README.md
.github/workflows/: DISABLED_debug-sync.yml  DISABLED_sync-with-flyer-delivery.yml  DISABLED_sync-with-validation-fixed.yml  debug-enhanced-sync.yml  deploy-to-server.yml  emergency-debug.yml  enhanced-sync-debug.yml  fixed-sync.yml  improved-sync.yml  reliable-sync.yml  reliable-sync.yml.disabled  simple-diagnostic.yml  sync-willspub-events-hybrid.yml  sync-willspub-events-old.yml  sync-willspub-events.yml  sync-with-validation-fixed.yml  sync-with-validation.yml  test-discord.yml  validate-changes.yml
.github/workflows-archive/: README.md
analysis_backup/: analyze_duplicates_from_html.py  duplicate_event_ids.txt
ansible/: DOCKER_CUSTOM_SETUP.md  README.md  ansible.cfg
ansible/files/: original-ghost-compose.yaml
ansible/group_vars/: all.yml  ghostservers.yml  webservers.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: backup-current-state.yml  deploy-all-ghost-instances.yml  discover-portainer-stacks.yml  restore-orlandogirlsrockcamp.yml  site.yml  sync-orlandopunx-events.yml  test-connection.yml
archive/: CRITICAL_FILES_DO_NOT_ARCHIVE.txt
archive/old-scripts/: automated_sync_working_backup.py  check_anonymous_events.py  check_current_events.py  compare_scraped_vs_existing.py  comprehensive_monitoring_system_backup.py  fix_flyer_detection.py  investigate_gancio_api.py  preview_fixed_events.py  serve_flyers_enhanced_backup.py  sync_to_gancio_fixed.py  willspub_scraper_fixed.py  willspub_to_gancio_with_fixed_scraper.py
archive/old-workflows/: sync-willspub-events-backup.yml
backups/: backup-strategy.sh
backups/1755532065/: cloudcassette-blog-inspect.json
backups/1755532095/: INFRASTRUCTURE_SNAPSHOT.md  daemon.json  docker-volumes.txt  volume-cloudcassette_fresh_ghost_content.json  volume-cloudcassette_ghost_content.json  volume-cloudcassette_ghost_mysql.json
configs/gancio/: config.json.template
configs/nginx/: orlandopunx.conf
configs/systemd/: gancio.service
docs/: API_DOCUMENTATION.md  CURRENT_PORTAINER_STACKS.md  DEPLOYMENT_GUIDE.md  GitHub_Actions_Failure_Analysis_Guide.md  GitHub_Actions_Troubleshooting_Guide.md  PORT_ALLOCATION.md
gancio/: CHANGELOG.md  GITHUB_SETUP.md  README.md  SOLUTION.md
gancio/assets/: custom-style.css
gancio/config/: config.json.example  gancio.service
gancio/scripts/: deploy-customizations.sh  gancio_api_detective.py  willspub_to_gancio_final_working.py
monitoring/: health-check.sh
orlandopunx_infrastructure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: deploy-changes.sh  github-actions-health-check.sh  serve-gallery  sync-events
seo/: SEO_IMPLEMENTATION_GUIDE.md  deploy-seo.sh  nuxt.config.js  sitemap.xml  update-favicon.sh
src/: README.md
(+227 files in other folders)
